alignment fix

--- a/src/app/shared/components/users-list/users-list.component.scss
+++ b/src/app/shared/components/users-list/users-list.component.scss
@@ -40,7 +40,7 @@
   }
 
   .users-list {
-      justify-content: normal;
+      justify-content: center;
   }
 }
 
